fix auth in workflow

--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -4034,17 +4034,12 @@ jobs:
               return `${slug}-${timestamp}`;
             }
             async function updateProject(output) {
-              const token = process.env.GITHUB_TOKEN;
-              if (!token) {
-                throw new Error("GITHUB_TOKEN environment variable is required");
-              }
-              const octokit = github.getOctokit(token);
               const { owner, repo } = github.context.repo;
               const campaignId = output.campaign_id || generateCampaignId(output.project);
               core.info(`Campaign ID: ${campaignId}`);
               core.info(`Managing project: ${output.project}`);
               try {
-                const repoResult = await octokit.graphql(
+                const repoResult = await github.graphql(
                   `query($owner: String!, $repo: String!) {
                     repository(owner: $owner, name: $repo) {
                       id
@@ -4055,7 +4050,7 @@ jobs:
                 const repositoryId = repoResult.repository.id;
                 let projectId;
                 let projectNumber;
-                const existingProjectsResult = await octokit.graphql(
+                const existingProjectsResult = await github.graphql(
                   `query($owner: String!, $repo: String!) {
                     repository(owner: $owner, name: $repo) {
                       projectsV2(first: 100) {
@@ -4079,7 +4074,7 @@ jobs:
                 } else {
                   core.info(`Creating new project: ${output.project}`);
                   const projectDescription = `Campaign ID: ${campaignId}`;
-                  const createResult = await octokit.graphql(
+                  const createResult = await github.graphql(
                     `mutation($ownerId: ID!, $title: String!, $shortDescription: String) {
                       createProjectV2(input: {
                         ownerId: $ownerId,
@@ -4103,7 +4098,7 @@ jobs:
                   const newProject = createResult.createProjectV2.projectV2;
                   projectId = newProject.id;
                   projectNumber = newProject.number;
-                  await octokit.graphql(
+                  await github.graphql(
                     `mutation($projectId: ID!, $repositoryId: ID!) {
                       linkProjectV2ToRepository(input: {
                         projectId: $projectId,
@@ -4142,7 +4137,7 @@ jobs:
                           }
                         }
                       }`;
-                  const contentResult = await octokit.graphql(contentQuery, {
+                  const contentResult = await github.graphql(contentQuery, {
                     owner,
                     repo,
                     number: contentNumber,
@@ -4150,7 +4145,7 @@ jobs:
                   const contentId = output.issue
                     ? contentResult.repository.issue.id
                     : contentResult.repository.pullRequest.id;
-                  const existingItemsResult = await octokit.graphql(
+                  const existingItemsResult = await github.graphql(
                     `query($projectId: ID!, $contentId: ID!) {
                       node(id: $projectId) {
                         ... on ProjectV2 {
@@ -4180,7 +4175,7 @@ jobs:
                     itemId = existingItem.id;
                     core.info(`✓ Item already on board`);
                   } else {
-                    const addResult = await octokit.graphql(
+                    const addResult = await github.graphql(
                       `mutation($projectId: ID!, $contentId: ID!) {
                         addProjectV2ItemById(input: {
                           projectId: $projectId,
@@ -4197,7 +4192,7 @@ jobs:
                     core.info(`✓ Added ${contentType} #${contentNumber} to project board`);
                     try {
                       const campaignLabel = `campaign:${campaignId}`;
-                      await octokit.rest.issues.addLabels({
+                      await github.rest.issues.addLabels({
                         owner,
                         repo,
                         issue_number: contentNumber,
@@ -4210,7 +4205,7 @@ jobs:
                   }
                   if (output.fields && Object.keys(output.fields).length > 0) {
                     core.info(`Updating custom fields...`);
-                    const fieldsResult = await octokit.graphql(
+                    const fieldsResult = await github.graphql(
                       `query($projectId: ID!) {
                         node(id: $projectId) {
                           ... on ProjectV2 {
@@ -4254,7 +4249,7 @@ jobs:
                       } else {
                         valueToSet = { text: String(fieldValue) };
                       }
-                      await octokit.graphql(
+                      await github.graphql(
                         `mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $value: ProjectV2FieldValue!) {
                           updateProjectV2ItemFieldValue(input: {
                             projectId: $projectId,
