--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -4073,13 +4073,11 @@ jobs:
                   core.info(`✓ Found existing project: ${output.project} (#${projectNumber})`);
                 } else {
                   core.info(`Creating new project: ${output.project}`);
-                  const projectDescription = `Campaign ID: ${campaignId}`;
                   const createResult = await github.graphql(
-                    `mutation($ownerId: ID!, $title: String!, $shortDescription: String) {
+                    `mutation($ownerId: ID!, $title: String!) {
                       createProjectV2(input: {
                         ownerId: $ownerId,
-                        title: $title,
-                        shortDescription: $shortDescription
+                        title: $title
                       }) {
                         projectV2 {
                           id
@@ -4091,8 +4089,7 @@ jobs:
                     }`,
                     { 
                       ownerId: repositoryId, 
-                      title: output.project,
-                      shortDescription: projectDescription
+                      title: output.project
                     }
                   );
                   const newProject = createResult.createProjectV2.projectV2;
