enhance project management error handling for user accounts

--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -4079,6 +4079,20 @@ jobs:
                   projectNumber = existingProject.number;
                   core.info(`✓ Found existing project: ${output.project} (#${projectNumber})`);
                 } else {
+                  if (ownerType === "User") {
+                    const manualUrl = `https://github.com/users/${owner}/projects/new`;
+                    core.error(
+                      `❌ Cannot create project "${output.project}" on user account.\n\n` +
+                      `GitHub Actions cannot create projects on user accounts due to permission restrictions.\n\n` +
+                      `📋 To fix this:\n` +
+                      `  1. Go to: ${manualUrl}\n` +
+                      `  2. Create a project named "${output.project}"\n` +
+                      `  3. Link it to this repository\n` +
+                      `  4. Re-run this workflow\n\n` +
+                      `The workflow will then be able to add issues/PRs to the existing project.`
+                    );
+                    throw new Error(`Cannot create project on user account. Please create it manually at ${manualUrl}`);
+                  }
                   core.info(`Creating new project: ${output.project}`);
                   const createResult = await github.graphql(
                     `mutation($ownerId: ID!, $title: String!) {
@@ -4280,7 +4294,17 @@ jobs:
                 }
                 core.info(`✓ Project management completed successfully`);
               } catch (error) {
-                core.error(`Failed to manage project: ${error.message}`);
+                if (error.message && error.message.includes("does not have permission to create projects")) {
+                  core.error(
+                    `Failed to manage project: ${error.message}\n\n` +
+                    `💡 Troubleshooting:\n` +
+                    `  - If this is a User account, GitHub Actions cannot create projects. Use an Organization repository instead.\n` +
+                    `  - Or, create the project manually first, then the workflow can add items to it.\n` +
+                    `  - Ensure the workflow has 'projects: write' permission in the workflow file.`
+                  );
+                } else {
+                  core.error(`Failed to manage project: ${error.message}`);
+                }
                 throw error;
               }
             }
