require project token

--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -1081,6 +1081,8 @@ jobs:
           cat > "$GH_AW_PROMPT" << 'PROMPT_EOF'
           # Bug Bash Campaign - Weekly Sprint
           
+          > **💡 Setup Note:** If you want this workflow to automatically create projects, add a Personal Access Token (PAT) with `project` scope as a secret named `GITHUB_PROJECTS_TOKEN`, then uncomment the `env:` section above. Otherwise, manually create the "Bug Bash 2025" project first.
+          
           You are the Bug Bash Campaign orchestrator. Every week, you organize a focused bug hunting session.
           
           ## Your Mission
@@ -4038,8 +4040,23 @@ jobs:
               const campaignId = output.campaign_id || generateCampaignId(output.project);
               core.info(`Campaign ID: ${campaignId}`);
               core.info(`Managing project: ${output.project}`);
+              let githubClient = github;
+              if (process.env.GITHUB_PROJECTS_TOKEN) {
+                core.info(`✓ Using custom GITHUB_PROJECTS_TOKEN for project operations`);
+                const { Octokit } = require("@octokit/rest");
+                const octokit = new Octokit({
+                  auth: process.env.GITHUB_PROJECTS_TOKEN,
+                  baseUrl: process.env.GITHUB_API_URL || "https://api.github.com",
+                });
+                githubClient = {
+                  graphql: octokit.graphql.bind(octokit),
+                  rest: octokit.rest,
+                };
+              } else {
+                core.info(`ℹ Using default GITHUB_TOKEN (may not have project creation permissions)`);
+              }
               try {
-                const repoResult = await github.graphql(
+                const repoResult = await githubClient.graphql(
                   `query($owner: String!, $repo: String!) {
                     repository(owner: $owner, name: $repo) {
                       id
@@ -4082,7 +4099,7 @@ jobs:
                           }
                         }
                       }`;
-                const ownerProjectsResult = await github.graphql(ownerQuery, { login: owner });
+                const ownerProjectsResult = await githubClient.graphql(ownerQuery, { login: owner });
                 const ownerProjects = ownerType === "User" 
                   ? ownerProjectsResult.user.projectsV2.nodes
                   : ownerProjectsResult.organization.projectsV2.nodes;
@@ -4096,7 +4113,7 @@ jobs:
                 if (existingProject) {
                   core.info(`✓ Found project "${existingProject.title}" (#${existingProject.number})`);
                   try {
-                    await github.graphql(
+                    await githubClient.graphql(
                       `mutation($projectId: ID!, $repositoryId: ID!) {
                         linkProjectV2ToRepository(input: {
                           projectId: $projectId,
@@ -4138,7 +4155,7 @@ jobs:
                     throw new Error(`Cannot create project on user account. Please create it manually at ${manualUrl}`);
                   }
                   core.info(`Creating new project: ${output.project}`);
-                  const createResult = await github.graphql(
+                  const createResult = await githubClient.graphql(
                     `mutation($ownerId: ID!, $title: String!) {
                       createProjectV2(input: {
                         ownerId: $ownerId,
@@ -4160,7 +4177,7 @@ jobs:
                   const newProject = createResult.createProjectV2.projectV2;
                   projectId = newProject.id;
                   projectNumber = newProject.number;
-                  await github.graphql(
+                  await githubClient.graphql(
                     `mutation($projectId: ID!, $repositoryId: ID!) {
                       linkProjectV2ToRepository(input: {
                         projectId: $projectId,
@@ -4199,7 +4216,7 @@ jobs:
                           }
                         }
                       }`;
-                  const contentResult = await github.graphql(contentQuery, {
+                  const contentResult = await githubClient.graphql(contentQuery, {
                     owner,
                     repo,
                     number: contentNumber,
@@ -4207,7 +4224,7 @@ jobs:
                   const contentId = output.issue
                     ? contentResult.repository.issue.id
                     : contentResult.repository.pullRequest.id;
-                  const existingItemsResult = await github.graphql(
+                  const existingItemsResult = await githubClient.graphql(
                     `query($projectId: ID!, $contentId: ID!) {
                       node(id: $projectId) {
                         ... on ProjectV2 {
@@ -4237,7 +4254,7 @@ jobs:
                     itemId = existingItem.id;
                     core.info(`✓ Item already on board`);
                   } else {
-                    const addResult = await github.graphql(
+                    const addResult = await githubClient.graphql(
                       `mutation($projectId: ID!, $contentId: ID!) {
                         addProjectV2ItemById(input: {
                           projectId: $projectId,
@@ -4254,7 +4271,7 @@ jobs:
                     core.info(`✓ Added ${contentType} #${contentNumber} to project board`);
                     try {
                       const campaignLabel = `campaign:${campaignId}`;
-                      await github.rest.issues.addLabels({
+                      await githubClient.rest.issues.addLabels({
                         owner,
                         repo,
                         issue_number: contentNumber,
@@ -4267,7 +4284,7 @@ jobs:
                   }
                   if (output.fields && Object.keys(output.fields).length > 0) {
                     core.info(`Updating custom fields...`);
-                    const fieldsResult = await github.graphql(
+                    const fieldsResult = await githubClient.graphql(
                       `query($projectId: ID!) {
                         node(id: $projectId) {
                           ... on ProjectV2 {
@@ -4311,7 +4328,7 @@ jobs:
                       } else {
                         valueToSet = { text: String(fieldValue) };
                       }
-                      await github.graphql(
+                      await githubClient.graphql(
                         `mutation($projectId: ID!, $itemId: ID!, $fieldId: ID!, $value: ProjectV2FieldValue!) {
                           updateProjectV2ItemFieldValue(input: {
                             projectId: $projectId,
@@ -4339,12 +4356,18 @@ jobs:
                 core.info(`✓ Project management completed successfully`);
               } catch (error) {
                 if (error.message && error.message.includes("does not have permission to create projects")) {
+                  const usingCustomToken = !!process.env.GITHUB_PROJECTS_TOKEN;
                   core.error(
                     `Failed to manage project: ${error.message}\n\n` +
                     `💡 Troubleshooting:\n` +
-                    `  - If this is a User account, GitHub Actions cannot create projects. Use an Organization repository instead.\n` +
-                    `  - Or, create the project manually first, then the workflow can add items to it.\n` +
-                    `  - Ensure the workflow has 'projects: write' permission in the workflow file.`
+                    `  1. Create the project manually first at https://github.com/orgs/${owner}/projects/new\n` +
+                    `     Then the workflow can add items to it automatically.\n\n` +
+                    `  2. Or, add a Personal Access Token (PAT) with 'project' permissions:\n` +
+                    `     - Create a PAT at https://github.com/settings/tokens/new?scopes=project\n` +
+                    `     - Add it as a secret named GITHUB_PROJECTS_TOKEN\n` +
+                    `     - Pass it to the workflow: GITHUB_PROJECTS_TOKEN: \${{ secrets.GITHUB_PROJECTS_TOKEN }}\n\n` +
+                    `  3. Ensure the workflow has 'projects: write' permission.\n\n` +
+                    `${usingCustomToken ? '⚠️  Note: Already using GITHUB_PROJECTS_TOKEN but still getting permission error.' : '📝 Currently using default GITHUB_TOKEN (no project create permissions).'}`
                   );
                 } else {
                   core.error(`Failed to manage project: ${error.message}`);
