--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -1285,7 +1285,7 @@ jobs:
                 "headers": {
                   "Authorization": "Bearer \${GITHUB_PERSONAL_ACCESS_TOKEN}",
                   "X-MCP-Readonly": "true",
-                  "X-MCP-Toolsets": "default"
+                  "X-MCP-Toolsets": "issues,projects"
                 },
                 "tools": ["*"],
                 "env": {
