--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -1342,7 +1342,7 @@ jobs:
           
           ## Steps
           
-          1. Calculate the current project name using the format "Bug Bash YYYY-WNN" where YYYY is the current year and WNN is the ISO week number (e.g., "Bug Bash 2025-W46"). Use this as the project name for all `update-project` safe outputs unless `project_url` input overrides it.
+          1. Calculate the current project name using the format "Bug Bash YYYY WNN" where YYYY is the current year and WNN is the ISO week number (e.g., "Bug Bash 2025 W46"). Use this as the project name for all `update-project` safe outputs unless `project_url` input overrides it.
           2. Use the GitHub MCP server tools (issues toolset) to fetch recent open issues (last 30 days) that have at least one of these labels: `bug`, `defect`, or `regression`. Filter out:
              - Issues already on the board
              - Closed issues
@@ -1399,7 +1399,7 @@ jobs:
           ```json
           {
             "type": "update-project",
-            "project": "Bug Bash 2025-W46",
+            "project": "Bug Bash 2025 W46",
             "content_type": "issue",
             "content_number": 123,
             "fields": {
@@ -1418,7 +1418,7 @@ jobs:
           ````markdown
           # Bug Bash Weekly Campaign Summary
           
-          **Project**: <CALCULATED_PROJECT_NAME> (e.g., Bug Bash 2025-W46)
+          **Project**: <CALCULATED_PROJECT_NAME> (e.g., Bug Bash 2025 W46)
           **Scanned**: <SCANNED_COUNT> | **Added**: <ADDED_COUNT> | **Skipped**: <SKIPPED_COUNT>
           
           ## Priority Distribution
