Update Bug Bash Campaign name

--- a/.github/workflows/bug-bash-campaign.lock.yml
+++ b/.github/workflows/bug-bash-campaign.lock.yml
@@ -31,7 +31,7 @@
 #   - actions/upload-artifact@v5 (330a01c490aca151604b8cf639adc76d48f6c5d4)
 #     https://github.com/actions/upload-artifact/commit/330a01c490aca151604b8cf639adc76d48f6c5d4
 
-name: "Bug Bash Campaign"
+name: "Weekly Bug Bash Campaign"
 "on":
   schedule:
   - cron: "0 10 * * 1"
@@ -50,7 +50,7 @@ permissions:
 concurrency:
   group: "gh-aw-${{ github.workflow }}"
 
-run-name: "Bug Bash Campaign"
+run-name: "Weekly Bug Bash Campaign"
 
 jobs:
   activation:
@@ -1342,7 +1342,7 @@ jobs:
           
           ## Steps
           
-          1. Calculate the current project name using the format "Bug Bash YYYY WNN" where YYYY is the current year and WNN is the ISO week number (e.g., "Bug Bash 2025 W46"). Use this as the project name for all `update-project` safe outputs unless `project_url` input overrides it.
+          1. Calculate the current project name using the format "Bug Bash YYYY - WNN" where YYYY is the current year and WNN is the ISO week number with leading zero (e.g., "Bug Bash 2025 - W46" for week 46). Use this as the project name for all `update-project` safe outputs unless `project_url` input overrides it. The project must already exist - do not attempt to create it.
           2. Use the GitHub MCP server tools (issues toolset) to fetch recent open issues (last 30 days) that have at least one of these labels: `bug`, `defect`, or `regression`. Filter out:
              - Issues already on the board
              - Closed issues
@@ -1399,7 +1399,7 @@ jobs:
           ```json
           {
             "type": "update-project",
-            "project": "Bug Bash 2025 W46",
+            "project": "Bug Bash 2025 - W46",
             "content_type": "issue",
             "content_number": 123,
             "fields": {
@@ -1418,7 +1418,7 @@ jobs:
           ````markdown
           # Bug Bash Weekly Campaign Summary
           
-          **Project**: <CALCULATED_PROJECT_NAME> (e.g., Bug Bash 2025 W46)
+          **Project**: <CALCULATED_PROJECT_NAME> (e.g., Bug Bash 2025-W46)
           **Scanned**: <SCANNED_COUNT> | **Added**: <ADDED_COUNT> | **Skipped**: <SKIPPED_COUNT>
           
           ## Priority Distribution
@@ -1638,7 +1638,7 @@ jobs:
               model: "",
               version: "",
               agent_version: "0.0.354",
-              workflow_name: "Bug Bash Campaign",
+              workflow_name: "Weekly Bug Bash Campaign",
               experimental: false,
               supports_tools_allowlist: true,
               supports_http_transport: true,
@@ -3899,7 +3899,7 @@ jobs:
       - name: Setup threat detection
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd
         env:
-          WORKFLOW_NAME: "Bug Bash Campaign"
+          WORKFLOW_NAME: "Weekly Bug Bash Campaign"
           WORKFLOW_DESCRIPTION: "No description provided"
         with:
           script: |
@@ -4130,7 +4130,7 @@ jobs:
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd
         env:
           GH_AW_AGENT_OUTPUT: ${{ env.GH_AW_AGENT_OUTPUT }}
-          GH_AW_WORKFLOW_NAME: "Bug Bash Campaign"
+          GH_AW_WORKFLOW_NAME: "Weekly Bug Bash Campaign"
         with:
           github-token: ${{ secrets.GH_AW_GITHUB_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
